--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -12,7 +12,8 @@
         <div class="row">
             <div class="input-field">
                 <select id="status" name="status">
-                    {{#select story.status}}
+                    {{!-- wrapping the options select will be edited in the HBS file --}}
+                    {{#select story.status}} 
                     <option value="public" selected>Public</option>
                     <option value="private">Private</option>
                     {{/select}}
